Port YSM Mapping API to Minecraft 1.20.1